--- a/.github/workflows/promptflow-evals-e2e-test-azure.yml
+++ b/.github/workflows/promptflow-evals-e2e-test-azure.yml
@@ -56,11 +56,13 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - uses: azure/login@v2
         with:
-          creds: ${{ secrets.PF_EVALS_SP_CREDENTIALS }}
+          client-id: ${{ secrets.PF_EVALS_SP_CLIENT_ID }}
+          tenant-id: ${{ secrets.PF_EVALS_SP_TENANT_ID }}
+          subscription-id: ${{ secrets.PF_EVALS_SP_SUBSCRIPTION_ID }}
           enable-AzPSSession: true
       - name: run e2e tests
         id: run_e2e_tests_azure
-        run: | 
+        run: |
           poetry run pytest -m azuretest --cov=promptflow --cov-config=pyproject.toml --cov-report=term --cov-report=html --cov-report=xml
           poetry run python ../../scripts/code_qa/report_to_app_insights.py --activity e2e_tests_azure --junit-xml test-results.xml --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }} --git-branch ${{ github.ref }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
