--- a/.github/workflows/promptflow-evals-e2e-test-local.yml
+++ b/.github/workflows/promptflow-evals-e2e-test-local.yml
@@ -55,7 +55,9 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - uses: azure/login@v2
         with:
-          creds: ${{ secrets.PF_EVALS_SP_CREDENTIALS }}
+          client-id: ${{ secrets.PF_EVALS_SP_CLIENT_ID }}
+          tenant-id: ${{ secrets.PF_EVALS_SP_TENANT_ID }}
+          subscription-id: ${{ secrets.PF_EVALS_SP_SUBSCRIPTION_ID }}
           enable-AzPSSession: true
       - name: check azure is not installed
         run: poetry run pytest ../../scripts/code_qa/assert_local_install.py
