--- a/src/promptflow-core/pyproject.toml
+++ b/src/promptflow-core/pyproject.toml
@@ -50,6 +50,7 @@ flask = ">=2.2.3,<4.0.0"  # Serving endpoint requirements
 python-dateutil = ">=2.1.0,<3.0.0"  # Contracts RunInfo
 # ========fastapi server dependencies========
 fastapi = ">=0.109.0,<1.0.0" # used to build fastapi server
+starlette = ">=0.49.1,<0.50.0"
 # ========azureml-serving dependencies========
 # AzureML connection dependencies
 azure-identity = { version = ">=1.12.0,<2.0.0", optional = true }
